III-927: Hypenate typical-age-range paths
