# src/Event/EventControllerProvider.php
@@ -63,8 +63,8 @@ class EventControllerProvider implements ControllerProviderInterface
         $controllers->delete('event/{itemId}/images/{mediaObjectId}', 'event_editing_controller:removeImage');
 
         $controllers->post('event/{cdbid}/nl/description', 'event_editing_controller:updateDescription');
-        $controllers->post('event/{cdbid}/typicalAgeRange', 'event_editing_controller:updateTypicalAgeRange');
-        $controllers->delete('event/{cdbid}/typicalAgeRange', 'event_editing_controller:deleteTypicalAgeRange');
+        $controllers->post('event/{cdbid}/typical-age-range', 'event_editing_controller:updateTypicalAgeRange');
+        $controllers->delete('event/{cdbid}/typical-age-range', 'event_editing_controller:deleteTypicalAgeRange');
         $controllers->post('event/{cdbid}/major-info', 'event_editing_controller:updateMajorInfo');
         $controllers->post('event/{cdbid}/bookingInfo', 'event_editing_controller:updateBookingInfo');
         $controllers->post('event/{cdbid}/contactPoint', 'event_editing_controller:updateContactPoint');
