# src/Place/PlaceControllerProvider.php
@@ -61,8 +61,8 @@ class PlaceControllerProvider implements ControllerProviderInterface
         $controllers->delete('place/{itemId}/images/{mediaObjectId}', 'place_editing_controller:removeImage');
 
         $controllers->post('place/{cdbid}/nl/description', 'place_editing_controller:updateDescription');
-        $controllers->post('place/{cdbid}/typicalAgeRange', 'place_editing_controller:updateTypicalAgeRange');
-        $controllers->delete('place/{cdbid}/typicalAgeRange', 'place_editing_controller:deleteTypicalAgeRange');
+        $controllers->post('place/{cdbid}/typical-age-range', 'place_editing_controller:updateTypicalAgeRange');
+        $controllers->delete('place/{cdbid}/typical-age-range', 'place_editing_controller:deleteTypicalAgeRange');
         $controllers->post('place/{cdbid}/major-info', 'place_editing_controller:updateMajorInfo');
         $controllers->post('place/{cdbid}/bookingInfo', 'place_editing_controller:updateBookingInfo');
         $controllers->post('place/{cdbid}/contactPoint', 'place_editing_controller:updateContactPoint');
